<resources>
    <string name="app_name">Vinilos - Móvil</string>
    <string name="descripcion">Aplicación para coleccionistas de música </string>
    <string name="grupo">Desarrollado por: 4bidden </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulodetallealbum">Detalle del álbum</string>
    <string name="titulolistaalbum">Listado de álbumes</string>
    <string name="titulolistamusico">Listado de músicos</string>
    <string name="titulodetallemusico">Detalle músico</string>
    <string name="opAlbumes">Álbumes</string>
    <string name="opMusicos">Músicos</string>
    <string name="opColeccionistas">Coleccionistas</string>
    <string name="opCrearAlbum">+</string>
    <string name="todo">TODO</string>
    <string name="titulolistacoleccionistas">Listado de Coleccionistas</string>
    <string name="textoimagen">Imagen del barra menu</string>
    <string name="textoimagenlogo">Imagen del logo</string>
    <string name="imagen">cover album</string>
    <string name="imagencoleccionista">imagen coleccionista</string>
    <string name="titulo">Vinilos</string>
    <string name="textobotonentrar">Entrar</string>
    <string name="fechacreacion">Fecha\ncreación :</string>
    <string name="genero">Género :</string>
    <string name="disquera">Disquera :</string>
    <string name="descripcionalb">Descripción :</string>
    <string name="track">Track</string>
    <string name="duracion">Duración</string>
    <string name="fechanacimiento">Fecha\nnacimiento :</string>
    <string name="descripcionmusico">Descripción :</string>
    <string name="albumes">"Albums "</string>
    <string name="form_album_name">Nombre</string>
    <string name="form_album_cover">Carátula</string>
    <string name="form_album_date">Fecha de lanzamiento</string>
    <string name="form_album_descr">Descripción</string>
    <string name="form_album_genre">Género</string>
    <string name="form_album_recordlabel">Disquera</string>
    <string name="create_album">Crear Album</string>
    <string name="btCrearAlbum">Crear Album</string>
    <string name="titulocrearalbum">Crear Album</string>
    <string name="email">email</string>
    <string name="titulodetallecoleccionista">Detalle Coleccionista</string>
    <string name="form_track_name">Nombre</string>
    <string name="form_track_duracion">Duración</string>
    <string name="create_track">Crear Track</string>
    <string name="btcrearalbum">Crear Álbum</string>
</resources>