...
        android:text="@string/titulo"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bingreso"
        style="@style/botonMenu"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_marginBottom="12dp"
        android:background="@color/black"
        android:text="@string/textobotonentrar"
...
