<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragmentos.MusicoFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicosRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_musico"/>

</FrameLayout>